customize about and 404 pages

--- a/404.html
+++ b/404.html
@@ -15,11 +15,16 @@ layout: default
     line-height: 1;
     letter-spacing: -1px;
   }
+
+  .error {
+    margin-top: 1em;
+    font-style: italic;
+    color: lightgrey;
+  }
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/PZqx-lMZHM0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p class="error">404 not found</p>
 </div>
